Remove share functionality
